--- a/packages/bayserver-docker-cgi/package.json
+++ b/packages/bayserver-docker-cgi/package.json
@@ -1,10 +1,10 @@
 {
-  "version": "2.2.0",
+  "version": "2.2.3",
   "name": "bayserver-docker-cgi",
-  "description": "CGI docker of BayServer",
+  "description": "BayServer is one of the high-speed web servers. It operates as a single-threaded, asynchronous server, which makes it exceptionally fast. It also supports multi-core processors, harnessing the full potential of the CPU's capabilities.\n",
   "scripts": {
-    "run": "./node_modules/.bin/ts-node",
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf baykit/"
   },
   "author": "Yokohama Baykit",
   "license": "Baykit Public Lisence",
@@ -13,7 +13,7 @@
     "@types/node": "^18.11.10",
     "@types/source-map-support": "^0.5.6",
     "source-map-support": "^0.5.21",
-    "bayserver-core": "2.2.0",
+    "bayserver-core": "2.2.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
