--- a/packages/bayserver/package.json
+++ b/packages/bayserver/package.json
@@ -1,13 +1,15 @@
 {
   "name": "bayserver",
-  "version": "2.2.0",
-  "description": "BayServer",
+  "version": "2.2.3",
+  "description": "BayServer is one of the high-speed web servers. It operates as a single-threaded, asynchronous server, which makes it exceptionally fast. It also supports multi-core processors, harnessing the full potential of the CPU's capabilities.\n",
   "main": "bootstrap.js",
   "bin": {
     "bayserver": "bin/bootstrap.js"
   },
   "scripts": {
-    "run": "node bin/bootstrap.js -home=. -plan=plan/bayserver.plan"
+    "run": "node bin/bootstrap.js -home=. -plan=plan/bayserver.plan",
+    "build": "tsc",
+    "clean": "rm -f bin/bootstrap.js"
   },
   "keywords": [],
   "author": "Yokohama Baykit",
@@ -16,12 +18,12 @@
   "dependencies": {
     "process": "^0.11.10",
     "typescript": "^4.9.4",
-    "bayserver-core": "2.2.0",
-    "bayserver-docker-ajp": "2.2.0",
-    "bayserver-docker-fcgi": "2.2.0",
-    "bayserver-docker-cgi": "2.2.0",
-    "bayserver-docker-http": "2.2.0",
-    "bayserver-docker-wordpress": "2.2.0",
+    "bayserver-core": "2.2.3",
+    "bayserver-docker-ajp": "2.2.3",
+    "bayserver-docker-fcgi": "2.2.3",
+    "bayserver-docker-cgi": "2.2.3",
+    "bayserver-docker-http": "2.2.3",
+    "bayserver-docker-wordpress": "2.2.3",
     "ts-node": "^10.9.1"
   }
 }
